# meow-vm

./: .clang-format  CMakeLists.txt  CMakePresets.json  bundle.sh  log.txt
.meowconfig/: cache
include/common/: cast.h  disassemble.h  pch.h
include/core/: definitions.h  meow_object.h  object_traits.h  objects.h  op_code.h  op_codes.h  type.h  value.h
include/core/objects/: array.h  function.h  hash.h  hash_table.h  module.h  native.h  oop.h  string.h
include/debug/: disassemble.h
include/diagnostics/: diagnostic.h  locale.h
include/loader/: lexer.h  parser.h  tokens.h
include/memory/: garbage_collector.h  gc_disable_guard.h  gc_visitor.h  mark_sweep_gc.h  memory_manager.h
include/module/: module_manager.h  module_utils.h
include/module/loader/: lexer.h  parser.h
include/runtime/: builtin_registry.h  chunk.h  execution_context.h  operator_dispatcher.h
include/utils/: NOTE.md  hash_table.h  list.h  node.h  pair.h  unicode.h  variant.h  variant_anything_goes.h  variant_fast.h  variant_fast_opt.h  variant_fast_vm_packed.h  vector.h
include/utils/container/: hash_table.h  list.h  node.h  pair.h  vector.h
include/utils/string/: unicode.h
include/utils/types/: expected.h  (+7 more)
include/vm/: meow_engine.h  meow_vm.h
scripts/: run.sh
src/: main.cpp
src/core/: objects.cpp  value.cpp
src/diagnostics/: diagnostic.cpp
src/loader/: lexer.cpp  parser.cpp
src/memory/: mark_sweep_gc.cpp  memory_manager.cpp
src/module/: module_manager.cpp  module_utils.cpp  text_parser.cpp
src/runtime/: operator_dispatcher.cpp
src/vm/: meow_vm.cpp  old_vm_code_.txt
(+5 files in other folders)
